WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218073
DFGIntegerRangeOptimization is wrong for Upsilon (as 'shadow' nodes are not in SSA form)
https://bugs.webkit.org/show_bug.cgi?id=218073
Summary
DFGIntegerRangeOptimization is wrong for Upsilon (as 'shadow' nodes are not i...
Robin Morisset
Reported
2020-10-22 02:21:00 PDT
rdar://problem/69823539
Attachments
Patch
(5.75 KB, patch)
2020-10-22 02:30 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Patch
(5.75 KB, patch)
2020-10-22 02:38 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2020-10-22 02:30:10 PDT
Created
attachment 412078
[details]
Patch
Robin Morisset
Comment 2
2020-10-22 02:38:00 PDT
Created
attachment 412079
[details]
Patch fix trivial style nit
Saam Barati
Comment 3
2020-10-28 09:48:21 PDT
Comment on
attachment 412079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=412079&action=review
> Source/JavaScriptCore/dfg/DFGIntegerRangeOptimizationPhase.cpp:1532 > + unsigned i = 0, j = 0;
Nit: should be two lines def
EWS
Comment 4
2020-10-28 10:32:32 PDT
Committed
r269107
: <
https://trac.webkit.org/changeset/269107
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412079
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-10-28 10:33:20 PDT
<
rdar://problem/70769919
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug